--- a/property-service/.env
+++ b/property-service/.env
@@ -1,4 +1,4 @@
-﻿# Server Configuration
+# Server Configuration
 PORT=3002
 NODE_ENV=development
 
@@ -11,7 +11,7 @@ USER_JWT_SECRET=your_jwt_secret_here
 USER_SERVICE_JWT_SECRET=your_jwt_secret_here
 
 # SendGrid Configuration
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=your_sendgrid_api_key_here
 SENDGRID_FROM_EMAIL=lyvo.company@gmail.com
 
 # Google OAuth Configuration
@@ -28,6 +28,5 @@ CLOUDINARY_CLOUD_NAME=dxtfnvxmz
 CLOUDINARY_API_KEY=235414887552528
 CLOUDINARY_API_SECRET=SAJlO8Ahv3POCrJ8OGIWlkMYmcE
 
-SENDGRID_API_KEY=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
 
 SENDGRID_FROM_EMAIL=lyvo.company@gmail.com
