--- a/user-service/.env
+++ b/user-service/.env
@@ -1,25 +1,30 @@
-﻿# Server Configuration
+# Server Configuration
 PORT=4002
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGODB_URI=mongodb+srv://anandupg:Anandu7710@lyvo.gy0gjrn.mongodb.net/lyvoDB?retryWrites=true&w=majority&appName=Lyvo
+MONGO_URI=mongodb+srv://anandupg:Anandu7710@lyvo.gy0gjrn.mongodb.net/lyvoDB?retryWrites=true&w=majority&appName=Lyvo
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_here
 
 # SendGrid Configuration
-SENDGRID_API_KEY=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
-
+SENDGRID_API_KEY=your_sendgrid_api_key_here
 SENDGRID_FROM_EMAIL=lyvo.company@gmail.com
+
 
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=864948749872-dh9vc6atlj2psgd53oiqg99kqgdbusfe.apps.googleusercontent.com
 
-# Frontend URL
+# Frontend URL - PRODUCTION READY
+# Your actual Vercel URL
 FRONTEND_URL=http://localhost:3000
+
+# CORS Configuration - PRODUCTION READY
+# Your Vercel URL included in the comma-separated list
+CORS_ORIGIN=https://lyvo-teal.vercel.app,http://localhost:3000,http://localhost:5173
 
 # Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=dxtfnvxmz
 CLOUDINARY_API_KEY=235414887552528
-CLOUDINARY_API_SECRET=SAJlO8Ahv3POCrJ8OGIWlkMYmcE
+CLOUDINARY_API_SECRET=SAJlO8Ahv3POCrJ8OGIWlkMYmcE 
