--- a/user-service/env.example
+++ b/user-service/env.example
@@ -9,7 +9,7 @@ MONGO_URI=mongodb+srv://anandupg:Anandu7710@lyvo.gy0gjrn.mongodb.net/lyvoDB?retr
 JWT_SECRET=your_jwt_secret_here
 
 # SendGrid Configuration
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 SENDGRID_FROM_EMAIL=lyvo.company@gmail.com
 
 
