--- a/property-service/env.example
+++ b/property-service/env.example
@@ -3,7 +3,7 @@ PORT=3002
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/lyvoDB?retryWrites=true&w=majority&appName=Lyvo
+MONGO_URI=mongodb+srv://anandupg:Anandu7710@lyvo.gy0gjrn.mongodb.net/lyvoDB?retryWrites=true&w=majority&appName=Lyvo
 
 # JWT Configuration (MUST match user service)
 JWT_SECRET=your_jwt_secret_here
@@ -11,7 +11,7 @@ USER_JWT_SECRET=your_jwt_secret_here
 USER_SERVICE_JWT_SECRET=your_jwt_secret_here
 
 # SendGrid Configuration
-SENDGRID_API_KEY=your_sendgrid_api_key_here
+SENDGRID_API_KEY=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
 SENDGRID_FROM_EMAIL=your_email@example.com
 
 # Google OAuth Configuration
