room signup modified

--- a/user-service/.env
+++ b/user-service/.env
@@ -18,7 +18,7 @@ GOOGLE_CLIENT_ID=864948749872-dh9vc6atlj2psgd53oiqg99kqgdbusfe.apps.googleuserco
 
 # Frontend URL - PRODUCTION READY
 # Your actual Vercel URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://lyvo-teal.vercel.app
 
 # CORS Configuration - PRODUCTION READY
 # Your Vercel URL included in the comma-separated list
