--- a/user-service/.env
+++ b/user-service/.env
@@ -9,7 +9,7 @@ MONGO_URI=mongodb+srv://anandupg:Anandu7710@lyvo.gy0gjrn.mongodb.net/lyvoDB?retr
 JWT_SECRET=your_jwt_secret_here
 
 # SendGrid Configuration
-SENDGRID_API_KEY=your_sendgrid_api_key_here
+SENDGRID_API_KEY=SENDGRID_API_KEY=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
 SENDGRID_FROM_EMAIL=lyvo.company@gmail.com
 
 
