--- a/chat-service/env.example
+++ b/chat-service/env.example
@@ -3,7 +3,7 @@ PORT=5002
 NODE_ENV=development
 
 # MongoDB Atlas Configuration
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/lyvo_chat?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://<username>:<password>@cluster.mongodb.net/lyvo_chat?retryWrites=true&w=majority
 
 # JWT Configuration
 # JWT Configuration (MUST match user service)
