--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "concurrently -n \"SERVER,OCR\" -c \"bgBlue.bold,bgMagenta.bold\" \"nodemon server.js\" \"cd src/OCR-services && python app.py\"",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
