feat: persist actualCheckOutDate when marking tenant as checked out

--- a/src/OCR-services/.env
+++ b/src/OCR-services/.env
@@ -1,12 +1,3 @@
-# OCR Service Configuration
-PORT=5000
-DEBUG=False
-
-# OCR.space API Configuration
-OCR_SPACE_API_KEY=K86000038088957
-
-# MongoDB Configuration (if needed for logging)
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/lyvo?retryWrites=true&w=majority
-
-# Logging Configuration
-LOG_LEVEL=INFO
+FLASK_ENV=development
+PORT=5001
+DEBUG=true
